--- a/app/pages/creating/newProject/style/ProjectStyle.css
+++ b/app/pages/creating/newProject/style/ProjectStyle.css
@@ -34,7 +34,6 @@ body {
     width: 20px;
     height: 20px;
 }
-
 #comunity img {
     width: 100%;
     height: 100%;
@@ -70,9 +69,18 @@ body {
     top: 126px;
     background-color: #333333;
     filter: drop-shadow(8px 5px 5px rgba(0, 0, 0, 0.25));
+    display: flex;
+    flex-direction: row;
+    white-space: pre;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+    padding-left: 20px;
 }
-
-#rectangle_2 {
+textarea{
     position: relative;
     border-radius: 10px;
     width: 320px;
@@ -81,6 +89,15 @@ body {
     top: 183px;
     background-color: #333333;
     filter: drop-shadow(8px 5px 5px rgba(0, 0, 0, 0.25));
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 12px;
+    line-height: 14px;
+    color: #FFFFFF;
+    padding-top: 15px;
+    padding-left: 20px;
+    resize: none;
 }
 #text3 {
     display: flex;
@@ -94,7 +111,6 @@ body {
     color: #FFFFFF;
     padding-left: 20px;
 }
-
 #text4 {
     white-space: pre;
     width: 34px;
@@ -106,7 +122,7 @@ body {
     line-height: 14px;
     color: #FFFFFF;
     padding-top: 15px;
-    padding-left: 15px;
+    padding-left: 20px;
 }
 #rectangle_3 {
     position: relative;
